fix: game end splash screen on mobile

--- a/english-for-kids/src/components/game-end-splash-screen/game-end-splash-screen.scss
+++ b/english-for-kids/src/components/game-end-splash-screen/game-end-splash-screen.scss
@@ -1,7 +1,7 @@
 @import "../../breakpoints.scss";
 
 .game-end-splash-screen {
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
