--- a/english-for-kids/src/style.scss
+++ b/english-for-kids/src/style.scss
@@ -112,6 +112,7 @@ img {
   flex: 1;
 }
 
-.hamburger-menu-opened {
+.hamburger-menu-opened,
+.game-end-splash-screen-show {
   overflow: hidden;
 }
